[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/PausedGUI.gd" type="Script" id=1]

[node name="PausedGUI" type="CanvasLayer"]
pause_mode = 2
layer = 3
script = ExtResource( 1 )

[node name="Container" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -28.0
margin_right = 46.0
margin_bottom = 28.0

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
margin_right = 92.0
margin_bottom = 56.0

[node name="LblMain" type="Label" parent="Container/VBoxContainer"]
margin_right = 92.0
margin_bottom = 14.0
text = "Game Paused "

[node name="HBoxContainer" type="HBoxContainer" parent="Container/VBoxContainer"]
margin_top = 18.0
margin_right = 92.0
margin_bottom = 56.0

[node name="ResumeContainer" type="VBoxContainer" parent="Container/VBoxContainer/HBoxContainer"]
margin_right = 52.0
margin_bottom = 38.0

[node name="BtnResume" type="Button" parent="Container/VBoxContainer/HBoxContainer/ResumeContainer"]
margin_right = 52.0
margin_bottom = 20.0

[node name="LblResume" type="Label" parent="Container/VBoxContainer/HBoxContainer/ResumeContainer"]
margin_top = 24.0
margin_right = 52.0
margin_bottom = 38.0
text = "Resume"

[node name="QuitContainer" type="VBoxContainer" parent="Container/VBoxContainer/HBoxContainer"]
margin_left = 56.0
margin_right = 84.0
margin_bottom = 38.0

[node name="BtnQuit" type="Button" parent="Container/VBoxContainer/HBoxContainer/QuitContainer"]
margin_right = 28.0
margin_bottom = 20.0

[node name="LblQuit" type="Label" parent="Container/VBoxContainer/HBoxContainer/QuitContainer"]
margin_top = 24.0
margin_right = 28.0
margin_bottom = 38.0
text = "Quit"
[connection signal="pressed" from="Container/VBoxContainer/HBoxContainer/ResumeContainer/BtnResume" to="." method="_on_BtnResume_pressed"]
[connection signal="pressed" from="Container/VBoxContainer/HBoxContainer/QuitContainer/BtnQuit" to="." method="_on_BtnQuit_pressed"]
